feedback-service/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: feedback-service
  labels:
    name: feedback-service
